    - Fixed a regression that prevented eglQueryDevicesEXT from correctly
      enumerating GPUs on systems with multiple GPUs where access to the
      GPU device files was restricted for some GPUs.
    - Fixed a regression that could cause system hangs when changing display
      resolution on SLI Mosaic configurations.

  [ Luca Boccassi ]
  * Update nv-readme.ids.

 -- Luca Boccassi <bluca@debian.org>  Sat, 15 May 2021 17:25:14 +0100

nvidia-graphics-drivers (460.73.01-1) unstable; urgency=medium

  * New upstream production branch release 460.73.01 (2021-04-14).
    * Fixed CVE-2021-1076, CVE-2021-1077.  (Closes: #987216)
      https://nvidia.custhelp.com/app/answers/detail/a_id/5172
    - Added support for the following GPUs: A10, A10G, A30, PG506-232,
      RTX A4000, RTX A5000, T400, T600.

  [ Andreas Beckmann ]
  * Update nv-readme.ids.
  * Restrict watch file to releases from the 460.xx production branch.

 -- Andreas Beckmann <anbe@debian.org>  Fri, 23 Apr 2021 08:59:01 +0200

nvidia-graphics-drivers (460.67-1) unstable; urgency=medium

  * New upstream production branch release 460.67 (2021-03-18).
    - Fixed a bug where using ray tracing extensions on multi-GPU setups could
      result in application instability if the GPUs did not match.
    - Fixed an issue that prevented G-SYNC from working properly after a mode
      switch on Kepler-based GPUs.

  [ Luca Boccassi ]
  * Update nv-readme.ids.

 -- Andreas Beckmann <anbe@debian.org>  Sun, 21 Mar 2021 20:51:46 +0100

nvidia-graphics-drivers (460.56-2) unstable; urgency=medium

  * nvidia-alternative: Add libnvidia-ml.so slave alternative if
    libnvidia-ml-dev is installed.  (Closes: #984881)

 -- Andreas Beckmann <anbe@debian.org>  Wed, 10 Mar 2021 21:03:59 +0100

nvidia-graphics-drivers (460.56-1) unstable; urgency=medium

  * New upstream production branch release 460.56 (2021-02-25).
    - Added support for the following GPUs: GeForce RTX 3060, CMP 40HX,
      CMP 30HX.